code25_all/scala/12904978.txt
foldLeft
scala> val l = List(1, 2, 3)
res19: List[Int] = List(1 ,2 ,3)

scala> l foldLeft(1)(_ * _)
<console>:9: error: Int(1) does not take parameters
                    l foldLeft(1)(_ * _)
                                    ^

scala> l.foldLeft(1)(_ * _) 
res27: Int = 6

map
foldLeft(1)
